# jellyfin-py

./: .gitignore  .pre-commit-config.yaml  mock_json.json  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_runner.yml
.run/: Tests.run.xml  tox py-3.10.run.xml  tox py-3.11.run.xml  tox py-3.12.run.xml
src/Models/: ConfigurationData.py
src/jellyfin/: configuration.py  jellyfin_api.py
tests/: conftest.py  test_baseline.py
tests/test_jellyfin/: test_configuration.py  test_jellyfin_api.py
