[metadata]
name = jellyfin_py
version = attr: jellyfin.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cardonas/jellyfin-py
author = Steven Cardona
author_email = scardona@shadowreaper.dev
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
descriptions = Python wrapper for Jellyfin Api

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    packaging

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jellyfin-py = jellyfin_py.main:main

[options.extras_require]
toml =
    toml

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_untyped_defs = False
